--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -39,7 +39,7 @@ background-color: var(--lighterpurple);
 
 }
 
-a{
+#nav_a{
     font-size: x-large;
     color:var(--orange);
     text-decoration: none;
@@ -92,3 +92,27 @@ form.search input[type=text] {
     background: var(--lighterpurple);
   }
 
+.login, .signup{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--lighterpurple);
+    width: 20em;
+    transition: opacity 500ms;
+    display: none;
+}
+
+.login h1 ,.signup h1{
+    text-align: center;
+
+}
+
+#close{
+    position: relative;
+    left: 95%;
+
+}
+#close:hover{
+    background-color: #f1f1f1;
+}
