--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --orange: #FF784F;
     --yellow: #FFE19C;
     --white: #f1f1f1;
@@ -6,19 +6,20 @@
     --lighterpurple: #725E82;
 }
 
-*{
+* {
     box-sizing: border-box;
 }
 
-html, body{
-    margin:0px;
-    padding:0px;
+html,
+body {
+    margin: 0px;
+    padding: 0px;
     background-color: var(--yellow);
 }
 
 
 
-.navbar{
+.navbar {
     background-color: var(--darkpurple);
     display: flex;
     flex-direction: row;
@@ -29,23 +30,23 @@ html, body{
 
 }
 
-.navlink{
+.navlink {
     padding: .1em;
-    color:var(--orange);
+    color: var(--orange);
 }
 
-.navlink:hover{
-background-color: var(--lighterpurple);
+.navlink:hover {
+    background-color: var(--lighterpurple);
 
 }
 
-#nav_a{
+#nav_a {
     font-size: x-large;
-    color:var(--orange);
+    color: var(--orange);
     text-decoration: none;
 }
 
-.searchdiv{
+.searchdiv {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -53,7 +54,7 @@ background-color: var(--lighterpurple);
     padding: 5em;
 }
 
-form{
+form {
     width: 70%;
 }
 
@@ -64,35 +65,36 @@ form.search input[type=text] {
     border: 1px solid var(--darkpurple);
     float: left;
     background: var(--white);
-  }
+}
 
-  form.search input[type=text] {
+form.search input[type=text] {
     padding: 10px;
     font-size: 17px;
     border: 1px solid var(--darkpurple);
     float: left;
     width: 90%;
     background: var(--white);
-  }
-  
-  form.search button {
+}
+
+form.search button {
     float: left;
     min-width: 5%;
     padding: 10px;
     background: var(--darkpurple);
-    color:var(--orange);
+    color: var(--orange);
     font-size: 17px;
     border: 1px solid var(--darkpurple);
     border-left: none;
     cursor: pointer;
-  }
+}
 
-  form.search button:hover{
+form.search button:hover {
 
     background: var(--lighterpurple);
-  }
+}
 
-.login, .signup{
+.login,
+.signup {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -103,16 +105,43 @@ form.search input[type=text] {
     display: none;
 }
 
-.login h1 ,.signup h1{
+.login h1,
+.signup h1 {
     text-align: center;
 
 }
 
-#close{
+#close {
     position: relative;
     left: 95%;
 
 }
-#close:hover{
+
+
+#close:hover {
     background-color: #f1f1f1;
 }
+
+.gridcontainer{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    align-items: center;
+    justify-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-top: 2em;
+}
+
+.grid-item{
+    padding-left: 15px;
+    padding-right: 15px;
+    max-height: 300px;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
