--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -124,21 +124,16 @@ form.search button:hover {
 
 .gridcontainer{
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    align-items: center;
-    justify-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding-top: 2em;
+    grid-template-columns: auto auto auto;
+    padding: 2em 10% 2em;
 }
 
+
 .grid-item{
-    padding-left: 15px;
-    padding-right: 15px;
-    max-height: 300px;
+    margin: 5px 5px 5px;
+    color: #3A3042;
 }
+
 img {
     max-width: 100%;
     max-height: 100%;
