--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -122,16 +122,34 @@ form.search button:hover {
     background-color: #f1f1f1;
 }
 
+.containercontainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: aqua;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #b9b248;
+    width: 80%;
+    
+}
 .gridcontainer{
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 2em 10% 2em;
+    
 }
 
 
 .grid-item{
     margin: 5px 5px 5px;
     color: #3A3042;
+    max-width: 35em;
 }
 
 img {
@@ -139,4 +157,18 @@ img {
     max-height: 100%;
 }
 
+.textcontainer{
+    text-align: center;
+    font-size: 2em;
+    
+}
+.grid-item.textcontainer{
+    width: 100%;
+    height: 100%;
+}
 
+.textonrecipe{
+    text-decoration: none;
+    color: var(--orange);
+    
+}
