--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -14,7 +14,7 @@ html,
 body {
     margin: 0px;
     padding: 0px;
-    background-color: var(--yellow);
+    background-color: var(--white);
 }
 
 
@@ -145,15 +145,19 @@ form.search button:hover {
 }
 
 .recipecard{
+    display: flex;
+    flex-direction: column;
     margin: 5px 5px 5px;
-    max-width: 25em;
-    max-height: 15em;
+    width: 25em;
+    height: 15em;
     background-color: #000000;
+    box-shadow: 2px 4px #888888;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+
+.recipecardtop{
+    height: 80%;
+    width: 100%;
 }
 
 .recipecardbottom{
@@ -163,6 +167,7 @@ img {
     justify-content: space-between;
     background-color: red;
     width: 100%;
+    height: 20%;
     
 }
 
@@ -170,12 +175,37 @@ img {
     color: #FF784F;
     margin: 0;
     padding: 0;
-    font-size: 1.2vw;
+    font-size: xx-large;
  
 }
 
 .recipecardbottom button{
-    height: fit-content;
-    width: fit-content;
-    font-size: 1.2vw;
+    height: 100%;
+    width: 100%;
+    font-size: xx-large;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (max-width: 1250px) {
+    
+    .recipes{
+        display: grid;
+        grid-template-columns: auto auto;
+        
+    }
+
+}
+
+@media only screen and (max-width: 835px) {
+    
+    .recipes{
+        display: flex;
+        flex-direction: column;
+        
+    }
+
 }
