--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -46,6 +46,8 @@ body {
     text-decoration: none;
 }
 
+/* Front page css starts here */
+
 .searchdiv {
     display: flex;
     flex-direction: row;
@@ -122,7 +124,7 @@ form.search button:hover {
     background-color: #f1f1f1;
 }
 
-.maincontainer{
+.maincontainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,37 +132,37 @@ form.search button:hover {
     width: 100%;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
-    
+
 }
 
-.recipes{
+.recipes {
     display: grid;
     grid-template-columns: auto auto auto;
-    
+
 }
 
-.recipecard{
+.recipecard {
     display: flex;
     flex-direction: column;
     margin: 5px 5px 5px;
     width: 25em;
     height: 15em;
-    background-color: #000000;
-    box-shadow: 2px 4px #888888;
+    border: 2px solid black;
+    
 }
 
 
-.recipecardtop{
+.recipecardtop {
     height: 80%;
     width: 100%;
 }
 
-.recipecardbottom{
+.recipecardbottom {
     display: flex;
     flex-direction: row;
     justify-items: center;
@@ -168,18 +170,18 @@ form.search button:hover {
     background-color: red;
     width: 100%;
     height: 20%;
-    
+
 }
 
-.recipecardbottom h1{
+.recipecardbottom h1 {
     color: #FF784F;
     margin: 0;
     padding: 0;
     font-size: xx-large;
- 
+
 }
 
-.recipecardbottom button{
+.recipecardbottom button {
     height: 100%;
     width: 100%;
     font-size: xx-large;
@@ -191,21 +193,24 @@ img {
 }
 
 @media only screen and (max-width: 1250px) {
-    
-    .recipes{
+
+    .recipes {
         display: grid;
         grid-template-columns: auto auto;
-        
+
     }
 
 }
 
 @media only screen and (max-width: 835px) {
-    
-    .recipes{
+
+    .recipes {
         display: flex;
         flex-direction: column;
-        
+
     }
 
 }
+
+
+/* Recipe page css starts here */
