--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -136,8 +136,6 @@ form.search button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
-
 }
 
 .recipes {
@@ -214,3 +212,66 @@ img {
 
 
 /* Recipe page css starts here */
+
+.recipeimage{
+    display: flex;
+    width: 60em;
+    height: 30em;
+}
+
+.recipecontainer {
+    display: flex;
+    flex-direction: row;
+   
+    width: 60em;
+    height: fit-content;
+}
+
+.steps{
+    width: 50%;
+    height: fit-content;
+}
+
+.ingredients{
+    width: 50%;
+    height: fit-content;
+}
+
+.comments{
+    width: 50em;
+    height: fit-content
+}
+.comment{
+    background-color: var(--orange);
+}
+
+@media only screen and (max-width: 950px) {
+
+    .recipeimage{
+        display: flex;
+        width: 95vw;
+        height: 35vw
+    }
+
+    .recipecontainer {
+        display: flex;
+        flex-direction: column;
+        width: 95vw;
+        height: fit-content;
+    }
+
+    .steps{
+        width: 90%;
+        height: fit-content;
+    }
+    
+    .ingredients{
+        width: 90%;
+        height: fit-content;
+    }
+
+    .comments{
+        width: 70vw;
+        height: fit-content
+    }
+}
