--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -21,7 +21,6 @@ body {
 }
 
 
-
 .navbar {
     background-color: var(--black);
     display: flex;
@@ -249,30 +248,12 @@ img {
     }
 }
 
-/*Recipe add css*/
-
-
-.recipeadd{
-    display: flex;
-    flex-direction: column;
-    width: 50vw;
-}
-
-.recipeaddlabel{
-    padding: 2em;
-    
-}
-.addrecipebutton{
-    width:fit-content;
-    height: fit-content;
-}
-
 
 /* Login and Signup CSS */
 
 
 .login_body{
-    background: linear-gradient(120deg, #0E131F, #FF0035    );
+    background: linear-gradient(120deg, #0E131F, #FF0035 );
     height: 100vh;
 }
 
@@ -307,4 +288,23 @@ img {
     align-items: center;
     justify-items: center;
     padding: 5px;
+}
+
+/* Add recipe css */
+
+
+
+.recipeadd_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-color: #FF0035;
+    
+}
+
+.recipe_add{
+    width: fit-content;
+    height: fit-content;
+    background-color: #0E131F;
 }
