--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -300,36 +300,43 @@ img {
 
 .recipe_add {
     width: 40vh;
-    height: 40vh;
+    height: 70vh;
     background-color: #0E131F;
     
 }
 
 .add_image{
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    height: 30%;
+    height: 20%;
     width: 100%;
     background-color: #d8dfe7;
-
 }
 
 .guidelines{
     display: flex;
     flex-direction: row;
-    height: 70%;
+    height: 80%;
     width: 100%;
     background-color: #725E82;
 }
 .add_ingredients{
     width: 50%;
     background-color: aquamarine;
+    text-align: center;
 }
-
 
 .add_steps{
     width: 50%;
     background-color: purple;
+    text-align: center;
 }
 
+.add_button{
+    text-align: center;
+    padding-top: 40px;
+    
+}
+
+.hide{
+    width: 100%;
+    background-color: #FF0035;
+}
