--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -375,3 +375,48 @@ height: fit-content;
     align-items: center;
     height: 30%;
 }
+
+/*Add profile css*/
+.profile_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 95vh;
+}
+
+.profile_info{
+    width: 70vh;
+    height: 70vh;
+    background-color: red;
+    border-radius: 5%;
+}
+.profile_info h1{
+    text-align: center;
+}
+
+.userphoto{
+    width:200px;
+    height: 200px;
+}
+
+.imageholder{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 15vh;
+}
+
+.userinfo{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 65%;
+
+}
+.info{
+    width: 50%;
+    height: 100%;
+}
