--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ img {
 /* Recipe page css starts here */
 
 .recipeimage {
+    position: relative;
     display: flex;
     width: 60em;
     height: 30em;
@@ -209,25 +210,39 @@ img {
 
 .comments {
     width: 50em;
-    height: fit-content
+    height: fit-content;
 }
 
 .comment {
     background-color: var(--orange);
 }
 
+#add_comment{
+    height: 500px;
+}
+
+.likebutton{
+    height: 50px;
+    width: 50px;
+}
+.likebutton_container{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
 @media only screen and (max-width: 950px) {
 
     .recipeimage {
         display: flex;
-        width: 95vw;
-        height: 35vw
+        width: 95vh;
+        height: 35vh;
     }
 
     .recipecontainer {
         display: flex;
         flex-direction: column;
-        width: 95vw;
+        width: 95vh;
         height: fit-content;
     }
 
@@ -242,7 +257,7 @@ img {
     }
 
     .comments {
-        width: 70vw;
+        width: 70vh;
         height: fit-content
     }
 }
@@ -289,45 +304,53 @@ img {
 
 /* Add recipe css */
 
+.recipeaddbody{
+    background-color: var(--dark);
+}
 .recipeadd_container {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: #FF0035;
     padding-top: 7em;
 }
 
 .recipe_add {
-    width: 40vh;
+
+    width: 35%;
     height: 70vh;
-    background-color: #0E131F;
     
 }
 
 .add_image{
-    height: 20%;
+    height: 90%;
     width: 100%;
-    background-color: #d8dfe7;
+    max-width: 50%;
 }
 
 .guidelines{
+    padding-top: 20px;
     display: flex;
     flex-direction: row;
     height: 80%;
     width: 100%;
-    background-color: #725E82;
+   
 }
 .add_ingredients{
     width: 50%;
-    background-color: aquamarine;
+    background-color: var(--dark);
     text-align: center;
+    color: var(--black);
+    margin-right: 50px;
+    border-radius: 2%;
 }
 
 .add_steps{
     width: 50%;
-    background-color: purple;
+    background-color: var(--dark);
     text-align: center;
+    color: var(--black);
+    border-radius: 2%;
 }
 
 .add_button{
@@ -338,5 +361,62 @@ img {
 
 .hide{
     width: 100%;
-    background-color: #FF0035;
+    background-color: var(--dark);
+}
+
+#textarea{
+width: 70%;
+height: fit-content;
+}
+
+.image_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 30%;
+}
+
+/*Add profile css*/
+.profile_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 95vh;
+}
+
+.profile_info{
+    width: 70vh;
+    height: 70vh;
+    background-color: red;
+    border-radius: 5%;
+}
+.profile_info h1{
+    text-align: center;
+}
+
+.userphoto{
+    width:200px;
+    height: 200px;
+}
+
+.imageholder{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 15vh;
+}
+
+.userinfo{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 65%;
+
+}
+.info{
+    width: 50%;
+    height: 100%;
 }
