--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -9,6 +9,7 @@
     --light: #D3D3D3;
     --white: #FFFFFF;
     --cold: #F5F3F4;
+    --border: #0a0000;
 }
 
 * {
@@ -99,7 +100,8 @@ form.search button {
 
 form.search button:hover {
 
-    background: var(--lighterpurple);
+    background: var(--background2);
+    color: var(--background1);
 }
 
 .maincontainer {
@@ -128,7 +130,7 @@ form.search button:hover {
     margin: 5px 5px 5px;
     width: 25em;
     height: 15em;
-    border: 2px solid black;
+    border: 2px solid var(--border);
 
 }
 
@@ -140,12 +142,12 @@ form.search button:hover {
 .recipecardbottom {
     display: flex;
     flex-direction: row;
-    justify-items: center;
-    justify-content: space-between;
+    align-items: center;
     background-color: var(--light);
     width: 100%;
     height: 20%;
-
+    border-top: 2px solid var(--border);
+    
 }
 
 .recipecardbottom h1 {
