--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -3,7 +3,7 @@
 :root {
     --background1: #0E131F;
     --background2: #FF0035;
-    --red:var(--background2);
+    --red: var(--background2);
     --dark: #B1A7A6;
     --black: #161A1D;
     --light: #D3D3D3;
@@ -49,11 +49,53 @@ body {
 
 }
 
+
 #nav_a {
     font-size: x-large;
     color: var(--red);
     text-decoration: none;
+    background-color: var(--black);
+    border: none;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    font-size: large;
+    color: var(--background2);
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0px;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    background-color: var(--black);
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: var(--red);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  #nav_a:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+
 
 /* Front page css starts here */
 
@@ -147,7 +189,7 @@ form.search button:hover {
     width: 100%;
     height: 20%;
     border-top: 2px solid var(--border);
-    
+
 }
 
 .recipecardbottom h1 {
@@ -206,6 +248,8 @@ img {
     height: 50px;
     width: 50px;
     font-size: xx-large;
+    color: var(--border);
+    background-color: var(--background2);
 }
 
 .likebutton_container {
@@ -265,7 +309,7 @@ img {
     min-height: 8vh;
     background-color: var(--cold);
     margin: 10px 10px 10px;
-    
+
 }
 
 .username {
@@ -294,6 +338,7 @@ img {
         justify-content: center;
         width: 100%;
     }
+
     .ingredients,
     .steps {
         width: 75%;
@@ -332,14 +377,14 @@ img {
 
     }
 
-    .likebutton{
+    .likebutton {
         height: 40px;
         width: 40px;
         font-size: large;
     }
 
 }
- 
+
 
 
 
