--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -28,6 +28,7 @@ body {
     min-height: 100vh;
 }
 
+/*Navbar css starts here*/
 .navbar {
     background-color: var(--black);
     display: flex;
@@ -58,42 +59,47 @@ body {
     border: none;
 }
 
-/* The container <div> - needed to position the dropdown content */
+
 .dropdown {
     position: relative;
     display: inline-block;
     font-size: large;
     color: var(--background2);
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+}
+
+
+.dropdown-content {
     display: none;
     position: absolute;
     right: 0px;
-    background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     background-color: var(--black);
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+}
+
+
+.dropdown-content a {
     color: var(--red);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  #nav_a:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+}
+
+
+.dropdown-content a:hover {
+    background-color: var(--background2);
+    color: var(--border);
+}
+
+
+#nav_a:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
 
 
 
