--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -101,6 +101,62 @@ body {
     background-color: #3e8e41;
 }
 
+/* Login and Signup CSS */
+
+.login_body {
+    background: linear-gradient(120deg, #0E131F, #FF0035);
+    height: 100vh;
+}
+
+.logincenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background: linear-gradient(120deg, #384052, #d8dfe7);
+    border-radius: 10px;
+}
+
+.logincenter h1 {
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid black;
+}
+
+.login_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 400px;
+    padding-bottom: 30px;
+}
+
+.txt_field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    padding: 5px;
+}
+
+.recipe_headers {
+    text-align: center;
+}
+
+.addcomment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.comment_area {
+    width: 90%;
+    height: 10vh;
+}
+
 
 
 /* Front page css starts here */
@@ -394,139 +450,38 @@ img {
 
 
 
-/* Login and Signup CSS */
 
-.login_body {
-    background: linear-gradient(120deg, #0E131F, #FF0035);
-    height: 100vh;
-}
-
-.logincenter {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    background: linear-gradient(120deg, #384052, #d8dfe7);
-    border-radius: 10px;
-}
-
-.logincenter h1 {
-    text-align: center;
-    padding: 0 0 20px 0;
-    border-bottom: 1px solid black;
-}
-
-.login_form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    width: 400px;
-    padding-bottom: 30px;
-}
-
-.txt_field {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    padding: 5px;
-}
-
-.recipe_headers {
-    text-align: center;
-}
-
-.addcomment {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.comment_area {
-    width: 90%;
-    height: 10vh;
-}
 
 /* Add recipe css */
 
-.recipeaddbody {
-    background-color: var(--dark);
+.recipeadd_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 90vh;
 }
 
-.recipeadd_container {
+.recipe_add{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    padding-top: 7em;
+    width: 75vw;
+    height: 100%;
+    background-color: white;
 }
 
-.recipe_add {
-
-    width: 35%;
-    height: 70vh;
-
+.file_container{
+    max-width: 600px;
+    max-height: 350px;
+    border: 2px solid var(--border);
+}
+#output{
+    max-width: 600px;
+    max-height: 350px;
 }
 
-.add_image {
-    height: 90%;
-    width: 100%;
-    max-width: 50%;
-}
-
-.guidelines {
-    padding-top: 20px;
-    display: flex;
-    flex-direction: row;
-    height: 80%;
-    width: 100%;
-
-}
-
-.add_ingredients {
-    width: 50%;
-    background-color: var(--dark);
-    text-align: center;
-    color: var(--black);
-    margin-right: 50px;
-    border-radius: 2%;
-}
-
-.add_steps {
-    width: 50%;
-    background-color: var(--dark);
-    text-align: center;
-    color: var(--black);
-    border-radius: 2%;
-}
-
-.add_button {
-    text-align: center;
-    padding-top: 40px;
-
-}
-
-.hide {
-    width: 100%;
-    background-color: var(--dark);
-}
-
-#textarea {
-    width: 70%;
-    height: fit-content;
-}
-
-.image_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 30%;
-}
-
-/*Add profile css*/
+/*Profile css*/
 .profile_container {
     display: flex;
     flex-direction: row;
