--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -248,7 +248,7 @@ form.search button:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: var(--light);
+    background-color: var(--notasblack);
     width: 100%;
     height: 20%;
     border-top: 2px solid var(--border);
@@ -256,7 +256,7 @@ form.search button:hover {
 }
 
 .recipecardbottom h1 {
-    color: var(--black);
+    color: var(--red);
     margin: 0;
     padding: 0;
     font-size: x-large;
