--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -455,7 +455,7 @@ img {
 
 /* Add recipe css */
 
-.recipeadd_container{
+.recipeadd_container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -463,7 +463,7 @@ img {
     height: 90vh;
 }
 
-.recipe_add{
+.recipe_add {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -472,87 +472,106 @@ img {
     background-color: white;
 }
 
-.file_container{
+.file_container {
     max-width: 600px;
     max-height: 350px;
     border: 2px solid var(--border);
 }
-#output{
+
+#output {
     max-width: 600px;
     max-height: 350px;
 }
 
 /*Profile css*/
+
 .profile_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10%;
-}
-
-.profile_info {
-    width: 70vh;
-    height: fit-content;
-    background-color: var(--notasblack);
-    border-radius: 5%;
-    color: var(--red);
-}
-
-.profile_info h1 {
-    text-align: center;
-}
-
-
-.userinfo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 65%;
-
-}
-
-.info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
-    height: 100%;
+    width: 100vw;
+    height: 90vh;
 }
 
-.ownrecipe_card, .likedrecipe_card{
-    width: 90%;
-    height: 30%;
-    min-height: 130px;
-    min-width: 240px;
-    background-color: #0a0000;
-    margin: 5px 5px 5px;
+.profilename {
+    padding-top: 2em;
+    padding-bottom: 1em;
+   
+}
+.profilename h1{
+    background: -webkit-linear-gradient(120deg, rgb(228, 203, 203), rgb(172, 18, 151));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+   
 }
 
-@media only screen and (max-width: 600px) {
+.profile_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+}
 
-    .profile_info{
-        border-radius: 0%;
-    }
-    .userinfo {
+.own_recipes,
+.most_liked {
+    width: fit-content;
+    height: fit-content;
+    background-color: var(--black);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    color: var(--red);
+    box-shadow: 3px 3px var(--border);
+}
+
+.own_recipes{
+    margin-right: 2em;
+}
+
+.most_liked{
+    margin-left: 2em;
+}
+.most_liked .recipecard{
+    margin: 1em 1em 1em;
+}
+.own_recipes .recipecard{
+    margin: 1em 1em 1em;
+}
+
+
+@media only screen and (max-width: 950px) {
+
+    .profile_content{
         flex-direction: column;
         align-items: center;
     }
-  
-    .profile_info h1{
-        font-size: x-large;
-    }
 
-    .info h2{
-        font-size: larger;
+    .own_recipes, .most_liked{
+        margin-right: 0;
+        margin-left: 0;
+        border-radius: 0%;
     }
+    
+    
+}
 
-    .info {
+
+@media only screen and (max-width: 450px) {
+
+    .own_recipes, .most_liked{
         width: 100%;
+        padding: 0;
+        margin: 0;
+        align-items: flex-start;
     }
-
-    .ownrecipe_card, .likedrecipe_card{
-        width: 70%;
+    
+  
+    .most_liked .recipecard{
+        margin: 0;
+    }
+    .own_recipes .recipecard{
+        margin: 0;
     }
 }
